feat:[layouts and styles]: add layouts and styles in pages

--- a/pages/portfolio/index.html
+++ b/pages/portfolio/index.html
@@ -3,45 +3,148 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../portfolio/assets/css/style.css">
+    <link rel="stylesheet" href="../../assets/css/style.css">
+    <link rel="stylesheet" href="../../assets/css/styleSwitcher.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
-    <title>Document</title>
+
+    <link rel="stylesheet" href="../../assets/css/color-1.css" class="alternative-style" title="color-1" disabled>
+    <link rel="stylesheet" href="../../assets/css/color-2.css" class="alternative-style" title="color-2" disabled>
+    <link rel="stylesheet" href="../../assets/css/color-3.css" class="alternative-style" title="color-3" disabled>
+    <link rel="stylesheet" href="../../assets/css/color-4.css" class="alternative-style" title="color-4" disabled>
+    <link rel="stylesheet" href="../../assets/css/color-5.css" class="alternative-style" title="color-5" disabled>
+    
+    <title>Final Project</title>
 </head>
-
-    <div class="main-content">
-    <div class="aside">
-        <div class="logo">
-            <a href="#"><span>j</span>ayvee</a>
+<body class="dark">
+    <!-- ==== Main Container ===== -->
+    <div class="main-container">
+        <!--========= Aside Start =======-->
+        <div class="aside">
+            <div class="logo">
+                <a href="#"><span>j</span>ayvee</a>
+            </div>
+            <div class="nav-toggler">
+                <span></span>
+            </div>
+            <ul class="nav">
+                <li><a href="../../index.html" class="active"><i class="fa fa-home"></i>Home</a></li>
+                <li><a href="../about1/index.html"><i class="fa fa-user"></i>About</a></li>
+                <li><a href="../services/index.html"><i class="fa fa-list"></i>Knowledge</a></li>
+                <li><a href="../portfolio/index.html "><i class="fa fa-briefcase"></i>Portfolio</a></li>
+                <li><a href="../contact/"><i class="fa fa-comments"></i>Contact</a></li>
+            </ul>
         </div>
-        <div class="nav-toggler">
-            <span></span>
+        <!--========= Aside End ========-->
+        <!--========= Main Content Start ========-->
+        <div class="main-content">
+            <!--======== Portfolio Section Start =======-->
+           <!--======== Portfolio Section Start =======-->
+           <section class="portfolio section">
+            <div class="container">
+                <div class="row2">
+                    <div class="section-title padd-15">
+                        <h2>Portfolio</h2>
+                    </div> 
+                </div>
+                <div class="row2">
+                    <div class="portfolio-items padd-15">
+                        <!--========== portfolio item start ============-->
+                        <div class="portfolio-item padd-15">
+                            <div class="portfolio-item-inner dark">
+                                <div class="portfolio-img">
+                                    <i class="fas fa-wand-sparkles"></i>
+                                    <h3>Seatwork 4</h3>
+                                    <h4>Feature Display</h4>
+                                    <a href="https://santuajayvee7.github.io/WD-sw4_santua/" class="btn">View Project</a>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="portfolio-item padd-15">
+                            <div class="portfolio-item-inner dark">
+                                <div class="portfolio-img">
+                                    <i class="fas fa-mask"></i>
+                                    <h3>Hands On 2</h3>
+                                    <h4>Hero & Cards</h4>
+                                    <a href="https://santuajayvee7.github.io/WD-Hands_On-2/" class="btn">View Project</a>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="portfolio-item padd-15">
+                            <div class="portfolio-item-inner dark">
+                                <div class="portfolio-img">
+                                    <i class="fas fa-laptop"></i>
+                                    <h3>Seatwork 3</h3>
+                                    <h4>Headers & Footers</h4>
+                                    <a href="https://santuajayvee7.github.io/WD_Santua_SW3/" class="btn">View Project</a>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="portfolio-item padd-15">
+                            <div class="portfolio-item-inner dark">
+                                <div class="portfolio-img">
+                                    <i class="fas fa-lemon"></i>
+                                    <h3>Midterm Task</h3>
+                                    <a href="https://santuajayvee7.github.io/WD.Midterm-Santua/" class="btn">View Project</a>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="portfolio-item padd-15">
+                            <div class="portfolio-item-inner dark">
+                                <div class="portfolio-img">
+                                    <i class="fas fa-file"></i>
+                                    <h3>Seatwork 2</h3>
+                                    <h4>Resume</h4>
+                                    <a href="https://santuajayvee7.github.io/wd-santua_sw2/" class="btn">View Project</a>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="portfolio-item padd-15">
+                            <div class="portfolio-item-inner dark">
+                                <div class="portfolio-img">
+                                    <i class="fas fa-chart-line fa-5x"></i>
+                                    <h3>Seatwork 1</h3>
+                                    <h4>Understanding the Website</h4>
+                                    <a href="https://docs.google.com/document/d/1Slk9D9fC6ElPM9LPwXn3-LscrwZm5p52Oz44sw1ez6I/edit" class="btn">View Project</a>
+                                </div>
+                            </div>
+                        </div>
+                        <!--========== portfolio item end   ============-->
+                    </div>
+                </div>
+            </div>
+        </section>
+                        <!--========== portfolio item end   ============-->
+                    </div>
+                </div>
+            </section>
+            <!--======== Portfolio Section End =======-->
         </div>
-        <ul class="nav">
-            <li><a href="./index.html" class="activte"><i class="fa fa-home"></i>Home</a></li>
-            <li><a href="./pages/about/index.html"><i class="fa fa-user"></i>About </a></li>
-            <li><a href=""><i class="fa fa-list"></i>Credits</a></li>
-            <li><a href=""><i class="fa fa-briefcase"></i>Portfolio</a></li>
-            <li><a href=""><i class="fa fa-comments"></i>Contact</a></li>
-        </ul>
-     </div>
+        <!--========= Main Content End ========-->
     </div>
+    <!-- ==== Main Container End ===== -->
 
-    <section class="portolio section">
-        <div class="container">
-            <div class="row">
-                <div class="section-title padd-15">
-                    <h2>Portolio</h2>
-                </div>
-            </div>
-            <div class="row">
-                <div class="porfolio-heading">
-                    <h2>My Projects :</h2>
-                </div>
-            </div>
+    <!--Style Switcher-->
+    <div class="style-switcher">
+        <div class="style-switcher-toggler s-icon">
+            <i class="fas fa-cog fa-spin"></i>
         </div>
-    </section>
+        <div class="daynight s-icon">
+            <i class="fas fa-moon"></i>
+        </div>
+        <h4> Theme Colors</h4>
+        <div class="colors">
+            <span class="color-1" onclick="setActiveStyle('color-1')"></span>
+            <span class="color-2" onclick="setActiveStyle('color-2')"></span>
+            <span class="color-3" onclick="setActiveStyle('color-3')"></span>
+            <span class="color-4" onclick="setActiveStyle('color-4')"></span>
+            <span class="color-5" onclick="setActiveStyle('color-5')"></span>
+        </div>
+    </div>
+    <!--Style Switcher End-->
 
-</div>
-</div>
+    <!-- ==== JavaScript ==== -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/typed.js/2.1.0/typed.min.js"></script>
+    <script src="../../assets/js/script.js"></script>
+    
 </body>
 </html>
