refactor[portfolio page] changed the link in portfolio

--- a/pages/portfolio/index.html
+++ b/pages/portfolio/index.html
@@ -103,8 +103,8 @@
                                 <div class="portfolio-img">
                                     <i class="fas fa-chart-line fa-5x"></i>
                                     <h3>Seatwork 1</h3>
-                                    <h4>Understanding the Website</h4>
-                                    <a href="https://docs.google.com/document/d/1Slk9D9fC6ElPM9LPwXn3-LscrwZm5p52Oz44sw1ez6I/edit" class="btn">View Project</a>
+                                    <h4>First Project</h4>
+                                    <a href="https://santuajayvee7.github.io/WD_Santua/" class="btn">View Project</a>
                                 </div>
                             </div>
                         </div>
