--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="./assets/css/color-3.css" class="alternative-style" title="color-3" disabled>
     <link rel="stylesheet" href="./assets/css/color-4.css" class="alternative-style" title="color-4" disabled>
     <link rel="stylesheet" href="./assets/css/color-5.css" class="alternative-style" title="color-5" disabled>
-    
+    <script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.12"></script>
     <title>Final Project</title>
 </head>
 <body class="dark">
@@ -80,7 +80,7 @@
     <!--Style Switcher End-->
 
     <!-- ==== JavaScript ==== -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/typed.js/2.1.0/typed.min.js"></script>
+   
     <script src="./assets/js/script.js"></script>
 </body>
 </html>
